--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://redxom2019:<LMDAOqsdfgh69>@mamamia.3oaqwzz.mongodb.net/?retryWrites=true&w=majority&appName=mamamia
+MONGODB_URI=mongodb+srv://redxom2019:LMFAOqsdfgh69@mamamia.3oaqwzz.mongodb.net/?retryWrites=true&w=majority&appName=mamamia
